[package]
name = "reclaim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-cognitoidentity = "1"
aws-sdk-iot = "1"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls", "url"] }
dirs = "5"
ureq = { version = "2", default-features = true }
anyhow = "1"
