[package]
name = "reclaim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-cognitoidentity = "1"
aws-sdk-iot = "1"
mqtt-endpoint-tokio = "0.3"
dirs = "6.0.0"
ureq = { version = "2", default-features = true }
anyhow = "1"
rustls-pemfile = "1"
rustls = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
json = "0.12.4"